--- a/CarpetaHenry/reset.css
+++ b/CarpetaHenry/reset.css
@@ -17,6 +17,9 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  text-decoration: none;
+  background-color: none;
+
 }
 
 /* HTML5 display-role reset for older browsers */
